# OLX_Parser

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: settings.py
app/endpoints/: routers.py
app/parser/: parse.py
app/services/: parse.py
