[tool.poetry]
name = "riaparser"
version = "0.1.0"
description = ""
authors = ["berendovychRB <ruslan.berendovych@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.9b0"
isort = "^5.9.3"
beautifulsoup4 = "4.8.1"
requests = "2.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
